pass in spot fleet service role

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -14,6 +14,9 @@ Parameters:
   EDLPassword:
     Type: String
     NoEcho: true
+  
+  SpotFleetServiceRoleArn:
+    Type: String
 
 Resources:
 
@@ -32,7 +35,7 @@ Resources:
       ComputeEnvironmentName: !Ref AWS::StackName
       ComputeResources:
         Type: SPOT
-        SpotIamFleetRole: !GetAtt FleetServiceRole.Arn
+        SpotIamFleetRole: !Ref SpotFleetServiceRole
         BidPercentage: 100
         MinvCpus: 0
         MaxvCpus: 40
@@ -131,17 +134,3 @@ Resources:
           Effect: Allow
       ManagedPolicyArns:
       - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role
-
-  FleetServiceRole:
-    Type: AWS::IAM::Role
-    Properties:
-      RoleName: !Sub "${AWS::StackName}-fleet-service-role"
-      AssumeRolePolicyDocument:
-        Version: 2012-10-17
-        Statement:
-          Action: sts:AssumeRole
-          Principal:
-            Service: ec2.amazonaws.com
-          Effect: Allow
-      ManagedPolicyArns:
-      - arn:aws:iam::aws:policy/aws-service-role/AWSEC2FleetServiceRolePolicy
