--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -31,7 +31,7 @@ Resources:
     Type: AWS::Batch::ComputeEnvironment
     Properties:
       Type: MANAGED
-      ServiceRole: !Ref BatchServiceRole
+      ServiceRole: !GetAtt BatchServiceRole.Arn
       ComputeEnvironmentName: !Ref AWS::StackName
       ComputeResources:
         Type: SPOT
