--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -90,7 +90,7 @@ Resources:
   TaskRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub "AWS::StackName-task-role"
+      RoleName: !Sub "${AWS::StackName}-task-role"
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
