--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -33,7 +33,8 @@ Resources:
     Properties:
       LaunchTemplateName: !Ref AWS::StackName
       LaunchTemplateData:
-        IamInstanceProfile: !Ref InstanceProfile
+        IamInstanceProfile: 
+          Name: !Ref InstanceProfile
         ImageId: !Ref AmiId
         InstanceType: r5d.xlarge
         SecurityGroupIds:
