--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -50,7 +50,7 @@ Resources:
               Content-Type: text/x-shellscript; charset="us-ascii"
 
               #!/bin/bash 
-              echo ECS_CLUSTER=$(aws batch describe-compute-environments --compute-environments ${ComputeEnvironment} --query computeEnvironments[].ecsClusterArn --output text)
+              ECS_CLUSTER=$(aws batch describe-compute-environments --compute-environments ${ComputeEnvironment} --query computeEnvironments[].ecsClusterArn --output text)
               echo "ECS_CLUSTER=$ECS_CLUSTER" >> /etc/ecs/ecs.config
 
               echo ECS_DISABLE_IMAGE_CLEANUP=false>>/etc/ecs/ecs.config 
