--- a/launch-instance/cloudformation.yml
+++ b/launch-instance/cloudformation.yml
@@ -52,7 +52,7 @@ Resources:
             Action:
             - ec2:RunInstances
             - ec2:CreateTags
-            Resource: !Sub "arn:aws:ec2:${AWS::Region}:${AWS::AccountId}:*"
+            Resource: !Sub "arn:aws:ec2:${AWS::Region}:*"
           - Effect: Allow
             Action: iam:PassRole
             Resource: !Ref InstanceRoleArn
