fix schedule typo

--- a/terminate-idle-instances/cloudformation.yml
+++ b/terminate-idle-instances/cloudformation.yml
@@ -75,7 +75,7 @@ Resources:
     Type: AWS::Events::Rule
     Properties:
       Name: !Ref AWS::StackName
-      ScheduleExpression: "rate(1 minutes)"
+      ScheduleExpression: "rate(1 minute)"
       Targets:
       - Arn: !GetAtt Lambda.Arn
         Id: lambda
