--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
+        pip install flake8  flake8-import-order flake8-blind-except flake8-builtins
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
