--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Flake8 Python Linting
 
 on: [push, pull_request]
 
@@ -24,8 +24,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8  flake8-import-order flake8-blind-except flake8-builtins
     - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 --max-line-length=120 --import-order-style=pycharm \
-        --statistics --tee 
+      run: flake8 --max-line-length=120 --import-order-style=pycharm --statistics
 
