--- a/.github/workflows/cfn-lint.yml
+++ b/.github/workflows/cfn-lint.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Run cfn-lint
       uses: scottbrenner/cfn-lint-action@master
       with:
-        args: "**/*.yml"
+        args: --ignore-checks W3002 **/*.yml
