--- a/.github/workflows/cfn-lint.yml
+++ b/.github/workflows/cfn-lint.yml
@@ -3,15 +3,24 @@ name: Lint CloudFormation Templates
 on: [push, pull_request]
 
 jobs:
-  cloudformation-linter:
+  cfn-lint:
 
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Run cfn-lint
-      uses: scottbrenner/cfn-lint-action@master
+    - name: Set up Python
+      uses: actions/setup-python@v1
       with:
-        args: --ignore-checks W3002 **/*.yml
+        python-version: 3.8
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install cfn-python-lint
+
+    - name: Run cfn-lint
+      # ingore "W3002 This code may only work with `package` cli command" warning
+      run: cfn-lint --ignore-checks W3002 *.yml **/*.yml
