--- a/.github/workflows/cfn-lint.yml
+++ b/.github/workflows/cfn-lint.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install cfn-python-lint
+        pip install cfn-lint
 
     - name: Run cfn-lint
       # ingore "W3002 This code may only work with `package` cli command" warning
