--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,17 +35,6 @@ jobs:
 
     - name: Deploy to AWS CloudFormation
       run: |
-        aws cloudformation package \
-          --template-file cloudformation.yml \
-          --s3-bucket ${{ env.TEMPLATE_BUCKET }} \
-          --output-template-file packaged.yml
-        aws cloudformation deploy \
-          --stack-name hyp3-${GITHUB_REF##*/} \
-          --template-file packaged.yml \
-          --role-arn ${{ env.CLOUDFORMATION_ROLE_ARN }} \
-          --capabilities CAPABILITY_NAMED_IAM \
-          --parameter-overrides \
-              VpcId=${{ env.VPC_ID }} \
-              EDLUsername=${{ env.EDL_USERNAME }} \
-              EDLPassword=${{ env.EDL_PASSWORD }} \
-              RtcGammaImage=${{ env.RTC_GAMMA_IMAGE }}
+        aws cloudformation package --template-file cloudformation.yml --s3-bucket ${TEMPLATE_BUCKET} --output-template-file packaged.yml
+        aws cloudformation deploy --stack-name hyp3-develop --template-file packaged.yml --role-arn ${CLOUDFORMATION_ROLE_ARN} --capabilities CAPABILITY_NAMED_IAM \
+                                  --parameter-overrides VpcId=${VPC_ID} EDLUsername=${EDL_USERNAME} EDLPassword=${EDL_PASSWORD} RtcGammaImage=${RTC_GAMMA_IMAGE}
