--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
 env:
   AWS_REGION: us-west-2
   TEMPLATE_BUCKET: cf-templates-aubvn3i9olmk-us-west-2
-  RTC_GAMMA_IMAGE: 845172464411.dkr.ecr.us-west-2.amazonaws.com/rtc-gamma:develop
+  RTC_GAMMA_REPOSITORY: 845172464411.dkr.ecr.us-west-2.amazonaws.com/rtc-gamma
 
   VPC_ID: ${{ secrets.VPC_ID }}
   EDL_USERNAME: ${{ secrets.EDL_USERNAME }}
@@ -36,5 +36,5 @@ jobs:
     - name: Deploy to AWS CloudFormation
       run: |
         aws cloudformation package --template-file cloudformation.yml --s3-bucket ${TEMPLATE_BUCKET} --output-template-file packaged.yml
-        aws cloudformation deploy --stack-name hyp3-develop --template-file packaged.yml --role-arn ${CLOUDFORMATION_ROLE_ARN} --capabilities CAPABILITY_NAMED_IAM \
-                                  --parameter-overrides VpcId=${VPC_ID} EDLUsername=${EDL_USERNAME} EDLPassword=${EDL_PASSWORD} RtcGammaImage=${RTC_GAMMA_IMAGE}
+        aws cloudformation deploy --stack-name hyp3-${GITHUB_REF##*/} --template-file packaged.yml --role-arn ${CLOUDFORMATION_ROLE_ARN} --capabilities CAPABILITY_NAMED_IAM \
+                                  --parameter-overrides VpcId=${VPC_ID} EDLUsername=${EDL_USERNAME} EDLPassword=${EDL_PASSWORD} RtcGammaImage=${RTC_GAMMA_REPOSITORY}:${GITHUB_REF##*/}
