add api stack to master stack

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -20,6 +20,13 @@ Parameters:
     Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
 
 Resources:
+  ApiStack:
+      Type: AWS::CloudFormation::Stack
+      Properties:
+        Parameters:
+          JobQueueArn: !Ref JobQueue
+          JobDefinition: !Ref RtcGammaJobDefinition
+          TemplateURL: launch-instance/cloudformation.yml
 
   LaunchInstanceStack:
     Type: AWS::CloudFormation::Stack
