allow stack to create jobs

--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -115,4 +115,6 @@ Resources:
           Statement:
           - Effect: Allow
             Action: batch:SubmitJob
-            Resource: !Ref JobQueueArn
+            Resource: 
+            - !Ref JobQueueArn
+            - !Ref JobDefinition
