enable access logging for api

--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -96,6 +96,9 @@ Resources:
       StageName: v1
       RestApiId: !Ref RestApi
       DeploymentId: !Ref Deployment
+      AccessLogSetting:
+        DestinationArn: !GetAtt LogGroup.Arn
+        Format: $context.identity.sourceIp $context.identity.caller $context.identity.user [$context.requestTime] "$context.httpMethod $context.resourcePath $context.protocol" $context.status $context.responseLength $context.requestId
 
   IamRole:
     Type: AWS::IAM::Role
@@ -115,6 +118,12 @@ Resources:
           Statement:
           - Effect: Allow
             Action: batch:SubmitJob
-            Resource: 
+            Resource:
             - !Ref JobQueueArn
             - !Ref JobDefinition
+
+  LogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Ref AWS::StackName
+      RetentionInDays: 90
