--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -8,10 +8,16 @@ Parameters:
   JobDefinition:
     Type: String
 
+  DomainName:
+    Type: String
+
+  CertificateArn:
+    Type: String
+
 Outputs:
 
   ApiEndpoint:
-    Value: !Sub "https://${RestApi}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/"
+    Value: !Sub "https://${DomainName}/${Stage}/"
 
 Resources:
 
@@ -25,7 +31,7 @@ Resources:
           title: hyp3-api
           version: 0.0.1
         servers:
-          - url: https://yxedp20dk1.execute-api.us-west-2.amazonaws.com/{basePath} #TODO create custom url
+          - url: !Sub "https://${DomainName}/{basePath}"
             variables:
               basePath:
                 default: /v1
@@ -97,6 +103,18 @@ Resources:
       RestApiId: !Ref RestApi
       DeploymentId: !Ref Deployment
 
+  CustomDomainName:
+    Type: AWS::ApiGateway::DomainName
+    Properties:
+      DomainName: !Ref DomainName
+      CertificateArn: !Ref CertificateArn
+
+  BasePathMapping:
+    Type: AWS::ApiGateway::BasePathMapping
+    Properties:
+      DomainName: !Ref CustomDomainName
+      RestApiId: !Ref RestApi
+
   IamRole:
     Type: AWS::IAM::Role
     Properties:
@@ -115,6 +133,6 @@ Resources:
           Statement:
           - Effect: Allow
             Action: batch:SubmitJob
-            Resource: 
+            Resource:
             - !Ref JobQueueArn
             - !Ref JobDefinition
