--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -15,6 +15,12 @@ Parameters:
   RtcGammaImage:
     Type: String
 
+  DomainName:
+    Type: String
+
+  CertificateArn:
+    Type: String
+
   AmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
@@ -27,6 +33,8 @@ Resources:
         Parameters:
           JobQueueArn: !Ref JobQueue
           JobDefinition: !Ref RtcGammaJobDefinition
+          DomainName: !Ref DomainName
+          CertificateArn: !Ref CertificateArn
         TemplateURL: api/cloudformation.yml
 
   LaunchInstanceStack:
